@@ -1,3 +1,9 @@
+2000-08-28  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* mail-callbacks.c (composer_send_cb): Free the from address when
+	we're done with it. Also, e_msg_composer_hdrs_get_from returns
+	alloc'd memory so don't strdup it.
+
 2000-08-28  Peter Williams  <peterw@helixcode.com>
 
 	* mail-ops.c (do_transfer_messages): Add status messages.
